Setup latex environment, created makefile, created files for different chapter, compilation & rendering now autogenerates toc

--- a/thesis/latex/Makefile
+++ b/thesis/latex/Makefile
@@ -1,5 +1,7 @@
 all:
-	latexmk -pdf -shell-escape thesis.tex
+	pdflatex thesis.tex
+	biber thesis
+	pdflatex thesis.tex
 
 clean:
 	latexmk -CA thesis.tex
